<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <!--    <ScrollView-->
    <!--        android:id="@+id/scrollView"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_below="@+id/editText2"-->
    <!--        android:layout_alignStart="@+id/editText2"-->
    <!--        android:layout_alignEnd="@+id/buttonSerialSendCounter">-->
    <!--        android:layout_alignParentBottom="true">-->
    <!--    </ScrollView>-->

    <Button
        android:id="@+id/buttonScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/scan" />

    <Button
        android:id="@+id/buttonSerialSendCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:text="@string/send_counter"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/buttonSerialQueryMeasure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonScan"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/query_measure" />

    <Button
        android:id="@+id/buttonSerialQueryCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSerialSendCounter"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/query_counter" />

    <EditText
        android:id="@+id/serialSendText"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_below="@+id/buttonSerialQueryMeasure"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:background="#555555"
        android:bufferType="editable"
        android:ems="10"
        android:inputType="text"
        android:text="@string/data_sending_area"
        android:textColor="#BCAAA4"
        android:textSize="20sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonSerialSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSerialQueryCounter"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/send_data" />

    <TextView
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/serialSendText"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:text="@string/received_data"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/serialReveicedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_alignEnd="@+id/buttonSerialSendCounter"
        android:ems="10"
        android:textSize="20sp" />


</RelativeLayout>